[gd_scene load_steps=20 format=2]

[ext_resource path="res://art/chalenge/analyze_algorithm/triangle.png" type="Texture" id=1]
[ext_resource path="res://art/chalenge/background_chalenge.png" type="Texture" id=2]
[ext_resource path="res://art/tutorial/red_square.png" type="Texture" id=3]
[ext_resource path="res://art/chalenge/analyze_algorithm/hint.png" type="Texture" id=4]
[ext_resource path="res://art/chalenge/analyze_algorithm/circle.png" type="Texture" id=5]
[ext_resource path="res://art/chalenge/analyze_algorithm/function_template.png" type="Texture" id=6]
[ext_resource path="res://art/chalenge/analyze_algorithm/square.png" type="Texture" id=7]
[ext_resource path="res://font/freepixel.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scene/component/shape.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/character/codemons/whilee.tscn" type="PackedScene" id=10]
[ext_resource path="res://scene/component/btn_medium.tscn" type="PackedScene" id=11]
[ext_resource path="res://scene/component/btn_normal.tscn" type="PackedScene" id=12]
[ext_resource path="res://scene/tutorial/tip.tscn" type="PackedScene" id=13]
[ext_resource path="res://scene/tutorial/while_tutorial.gd" type="Script" id=14]
[ext_resource path="res://scene/component/btn_codemon.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 38
outline_size = 1
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
extra_spacing_bottom = 4
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 26
extra_spacing_bottom = 4
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 26
extra_spacing_bottom = 4
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 8 )

[node name="while_tutorial" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.34921
margin_bottom = -2.34924
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 37.9194
margin_top = 34.8295
margin_right = 440.919
margin_bottom = 77.8295
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.372549, 0, 0, 1 )
text = "Análise de Algoritmo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="Label" parent="."]
margin_left = 38.2548
margin_top = 86.3945
margin_right = 660.255
margin_bottom = 219.395
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.152941, 1, 1 )
text = "Utilize corretamente os tipos de codemons para que retorne o resultado esperado. Em caso de variável é necessário atribuir o valor armazenado. "
align = 3
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red_square" type="Sprite" parent="."]
position = Vector2( 507.5, 310 )
scale = Vector2( 1.595, 0.44 )
texture = ExtResource( 3 )

[node name="function" type="TextureRect" parent="."]
anchor_left = 0.291793
anchor_top = 0.298742
anchor_right = 0.708785
anchor_bottom = 0.983742
rect_pivot_offset = Vector2( 59.0135, 76.8868 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="bg" type="ColorRect" parent="function"]
margin_left = 42.7772
margin_top = 324.461
margin_right = 368.777
margin_bottom = 364.461
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="function"]
margin_left = 82.7772
margin_top = 22.4615
margin_right = 201.777
margin_bottom = 65.4615
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.372549, 0, 0, 1 )
text = "Função"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="result" type="Label" parent="function"]
margin_left = 44.9933
margin_top = 332.498
margin_right = 213.993
margin_bottom = 363.498
rect_pivot_offset = Vector2( 97.1301, -2.77017 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Resultado ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="waited" type="Label" parent="function"]
margin_left = 44.9933
margin_top = 295.498
margin_right = 213.993
margin_bottom = 326.498
rect_pivot_offset = Vector2( 97.1301, -2.77017 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Esperado  ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value_waited" type="Label" parent="function"]
margin_left = 231.0
margin_top = 295.0
margin_right = 300.0
margin_bottom = 326.0
rect_pivot_offset = Vector2( 97.1301, -2.77017 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0, 1, 1 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value_result" type="Label" parent="function"]
margin_left = 231.0
margin_top = 330.0
margin_right = 300.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( 97.1301, -2.77017 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0313726, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="function"]
margin_left = 57.0
margin_top = 71.0
margin_right = 352.0
margin_bottom = 288.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_1" type="HBoxContainer" parent="function/vbox"]
margin_right = 295.0
margin_bottom = 32.0

[node name="e_1" type="Label" parent="function/vbox/line_1"]
margin_right = 69.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "while"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s_2" parent="function/vbox/line_1" instance=ExtResource( 9 )]
self_modulate = Color( 1, 0.466667, 0.466667, 1 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 73.0
margin_right = 105.0
margin_bottom = 32.0

[node name="s_3" parent="function/vbox/line_1" instance=ExtResource( 9 )]
self_modulate = Color( 0.466667, 0.466667, 1, 1 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 109.0
margin_right = 141.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="e_3" type="Label" parent="function/vbox/line_1"]
margin_left = 145.0
margin_right = 158.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_2" type="HBoxContainer" parent="function/vbox"]
margin_top = 42.0
margin_right = 295.0
margin_bottom = 74.0

[node name="e_3" type="Label" parent="function/vbox/line_2"]
margin_right = 32.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s_4" parent="function/vbox/line_2" instance=ExtResource( 9 )]
self_modulate = Color( 1, 0.466667, 0.466667, 1 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0

[node name="e_2" type="Label" parent="function/vbox/line_2"]
margin_left = 72.0
margin_right = 85.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s_6" parent="function/vbox/line_2" instance=ExtResource( 9 )]
self_modulate = Color( 1, 0.466667, 0.466667, 1 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 89.0
margin_right = 121.0
margin_bottom = 32.0

[node name="e_4" type="Label" parent="function/vbox/line_2"]
margin_left = 125.0
margin_right = 138.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="e_5" type="Label" parent="function/vbox/line_2"]
margin_left = 142.0
margin_right = 155.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line_5" type="HBoxContainer" parent="function/vbox"]
margin_top = 84.0
margin_right = 295.0
margin_bottom = 116.0

[node name="e_1" type="Label" parent="function/vbox/line_5"]
margin_right = 83.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s_1" parent="function/vbox/line_5" instance=ExtResource( 9 )]
self_modulate = Color( 1, 0.466667, 0.466667, 1 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 87.0
margin_right = 119.0
margin_bottom = 32.0

[node name="hint" type="TextureRect" parent="."]
margin_left = 675.591
margin_top = 11.0812
margin_right = 992.591
margin_bottom = 219.081
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="hint"]
margin_left = 76.616
margin_top = 16.8215
margin_right = 235.616
margin_bottom = 59.8215
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.372549, 0, 0, 1 )
text = "Lembrete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="variable" type="Label" parent="hint"]
margin_left = 67.8056
margin_top = 70.984
margin_right = 163.806
margin_bottom = 94.984
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "variável"

[node name="space" type="Label" parent="hint"]
margin_left = 67.8056
margin_top = 70.984
margin_right = 163.806
margin_bottom = 94.984
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arithmetic" type="Label" parent="hint"]
margin_left = 67.8056
margin_top = 113.984
margin_right = 295.806
margin_bottom = 137.984
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "operador aritmético"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logic" type="Label" parent="hint"]
margin_left = 67.8056
margin_top = 155.984
margin_right = 295.806
margin_bottom = 179.984
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "operador lógico"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="triangle" type="Sprite" parent="hint"]
position = Vector2( 36.3906, 76.2425 )
texture = ExtResource( 1 )

[node name="circle" type="Sprite" parent="hint"]
position = Vector2( 38.5762, 166.781 )
texture = ExtResource( 5 )

[node name="square" type="Sprite" parent="hint"]
position = Vector2( 37.6853, 123.498 )
texture = ExtResource( 7 )

[node name="symbol" type="VBoxContainer" parent="."]
margin_left = 40.8423
margin_top = 261.409
margin_right = 80.8423
margin_bottom = 535.409
custom_constants/separation = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s_1" type="TextureRect" parent="symbol"]
modulate = Color( 1, 0.466667, 0.466667, 1 )
margin_right = 40.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="s_2" type="TextureRect" parent="symbol"]
modulate = Color( 0.466667, 0.466667, 1, 1 )
margin_top = 112.0
margin_right = 40.0
margin_bottom = 144.0
texture = ExtResource( 5 )

[node name="equals" type="VBoxContainer" parent="."]
margin_left = 89.9543
margin_top = 271.287
margin_right = 102.954
margin_bottom = 544.0
custom_constants/separation = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="e_2" type="Label" parent="equals"]
margin_right = 13.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="e_3" type="Label" parent="equals"]
margin_top = 111.0
margin_right = 13.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_1" parent="." instance=ExtResource( 15 )]
anchor_left = 0.174805
anchor_top = 0.04
anchor_right = 0.174805
anchor_bottom = 0.516667
margin_left = 19.0703
margin_top = -27.5461
margin_right = 19.0703
margin_bottom = -27.5461
focus_mode = 2

[node name="btn_2" parent="." instance=ExtResource( 15 )]
anchor_left = 0.174805
anchor_top = 0.225
anchor_right = 0.174805
anchor_bottom = 0.701667
margin_left = 19.0703
margin_top = -27.5461
margin_right = 19.0703
margin_bottom = -27.5461

[node name="capture" parent="." instance=ExtResource( 12 )]
margin_left = 744.029
margin_top = 427.628
margin_right = 651.709
margin_bottom = 408.828

[node name="flee" parent="." instance=ExtResource( 12 )]
margin_left = 743.862
margin_top = 516.108
margin_right = 651.542
margin_bottom = 497.308

[node name="debuger" parent="." instance=ExtResource( 11 )]
visible = false
anchor_left = 0.529569
anchor_top = 0.830463
anchor_right = 0.529569
anchor_bottom = 0.830463

[node name="help" parent="." instance=ExtResource( 12 )]
margin_left = 744.052
margin_top = 472.107
margin_right = 651.732
margin_bottom = 453.307

[node name="chalenge" type="Label" parent="."]
margin_left = 695.882
margin_top = 221.938
margin_right = 983.882
margin_bottom = 252.938
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Desafiando While"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="whilee" parent="." instance=ExtResource( 10 )]
position = Vector2( 832.253, 342.772 )

[node name="tip" parent="." instance=ExtResource( 13 )]
anchor_left = 0.30494
anchor_top = 0.231804
anchor_right = 0.671151
anchor_bottom = 0.503471

[connection signal="pressed" from="capture" to="." method="_on_capture_pressed"]
[connection signal="pressed" from="debuger" to="." method="_on_debuger_pressed"]
